--- a/11.05.21-homework/login.html
+++ b/11.05.21-homework/login.html
@@ -15,15 +15,15 @@
         <div class="container">
             <div class="row my-5 justify-content-center">
                 <div class="col-6">
-                    <h1 class="my-4">Log in</h1>
+                    <h1 class="my-4">Login</h1>
                     <form id="form-login">
                         <div class="form-group my-2">
-                            <label for="username">Email address</label>
+                            <label for="username">Email address: </label>
                             <input type="text" class="form-control my-2" id="username" aria-describedby="emailHelp"
                                 placeholder="Enter username" required>
                         </div>
                         <div class="form-group mb-2">
-                            <label for="password">Password</label>
+                            <label for="password">Password: </label>
                             <input type="password" class="form-control my-2" id="password" placeholder="Password"
                                 required>
                             <span class="text-danger d-none mt-5 font-weight-bold" id="validation">Incorrect username or
@@ -37,7 +37,7 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="assets/js/Login.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
