--- a/11.05.21-homework/index.html
+++ b/11.05.21-homework/index.html
@@ -93,7 +93,7 @@
         </section>
 
         <!-- Modal start -->
-        <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal customers-list fade" id="myModal" role="dialog">
             <div class="modal-dialog modal-lg">            
               <!-- Modal content-->
               <div class="modal-content">
@@ -111,6 +111,43 @@
                             <th scope="col" aria-context-key="table_monthly_pay"></th>
                             <th scope="col" aria-context-key="table_due_amount"></th>
                             <th scope="col" aria-context-key="table_loan_date"></th>                       
+                          </tr>
+                        </thead>
+                        <tbody>
+                         
+                        </tbody>
+                      </table>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- Modal end -->
+
+          <!-- Modal start with api -->
+          <div class="modal api-users-list fade" id="myModalUser" role="dialog">
+            <div class="modal-dialog modal-lg">            
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body">
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">Fullname</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Gender</th>
+                            <th scope="col">Age</th>
+                            <th scope="col">Phone</th>                       
+                            <th scope="col">Country</th>
+                            <th scope="col">City</th>
+                            <th scope="col">Street</th>
+                            <th scope="col">Postcode</th>                       
                           </tr>
                         </thead>
                         <tbody>
